# UnemploymentTracker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup_sample_data.py
data/processed/: bls_unemployment.csv  processed_layoffs.csv
data/raw/: sample_layoffs.csv  sample_unemployment.csv
scripts/: fetch_sample_data.py  process_sample_data.py
src/: app.py
src/unemployment_tracker/: __init__.py
src/unemployment_tracker/data_ingestion/: bls_fetcher.py  geocode_util.py  layoff_parser.py
src/unemployment_tracker/processing/: skill_matcher.py  trend_detector.py
src/unemployment_tracker/visualization/: dashboard.py  map_view.py
tests/: conftest.py  test_basic.py
